new directory and files

--- a/.gitignore
+++ b/.gitignore
@@ -247,4 +247,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Tipe of Image
+*.png
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python
